# synthesis_library

./: .gitignore  CMakeLists.txt  README.md  todo.txt
client_app/: CMakeLists.txt  main.cpp
client_app/polysynth/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  audioengine.cpp  audioengine.h  clock.cpp  clock.h  envelope.cpp  envelope.h  fx.cpp  fx.h  midimanager.cpp  midimanager.h  midinotetoHz.h  musiclanguage.h  noise.cpp  noise.h  sampleplayer.cpp  sampleplayer.h  saw.cpp  saw.h  sawwave.cpp  sawwave.h  sculpt.h  sine.cpp  sine.h  sinewave.cpp  sinewave.h  soundsource.cpp  soundsource.h  square.cpp  square.h  squarewave.cpp  squarewave.h  triangle.cpp  triangle.h  trianglewave.cpp  trianglewave.h  utility.cpp  utility.h
